--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
+    "swr": "^0.3.11",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
