--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -4,14 +4,18 @@ FROM node:14.13.0-alpine
 
 WORKDIR /var/www
 
-# copy over the source code
-COPY ./embedded . 
 # install the dependencies
-RUN npm install 
+RUN apk update && \ 
+  apk upgrade && \ 
+  apk add bash && \
+  npm install 
+
+# copy over the source code
+COPY ./embedded .  
 
 EXPOSE 3000
 
 # Build the app
-RUN npm run build
+# RUN npm run build
 
-CMD [ "npm", "start" ] # run the app in production
+CMD [ "npm", "dev" ] # run the app in production
