--- a/embedded/package.json
+++ b/embedded/package.json
@@ -49,7 +49,9 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
     "swr": "^0.3.11",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "validator": "^13.5.2",
+    "react-hook-form": "^6.11.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
