--- a/embedded/package.json
+++ b/embedded/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-stage-3": "^7.0.0",
+    "@prettier/plugin-php": "^0.15.2",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.5",
     "@types/react": "^16.9.56",
@@ -71,7 +72,7 @@
     "jest": "26.6.2",
     "lint-staged": "^10.0.1",
     "nodemon": "^2.0.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0",
     "tsmon": "^0.7.3",
