--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.configPath": ".prettierrc.js",
   "prettier.prettierPath": "./embedded/node_modules/prettier",
-  "editor.formatOnPaste": true
+  "editor.formatOnPaste": true,
+  "editor.detectIndentation": false
 }
