--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,10 @@ services:
       SESSION_DOMAIN: .localhost
       APP_URL: ${APP_URL}
       EMBEDDED_URL: ${EMBEDDED_URL}
+      NYLAS_CLIENT_ID: ${NYLAS_CLIENT_ID}
+      NYLAS_CLIENT_SECRET: ${NYLAS_CLIENT_SECRET}
+      SOE_API_PASSWORD: ${SOE_API_PASSWORD}
+      SOE_SHOP_PASSWORD: ${SOE_SHOP_PASSWORD}
     working_dir: /var/www
     networks:
       - soe-network
@@ -94,6 +98,8 @@ services:
       HOST: ${EMBEDDED_URL}  
       APP_URL: ${APP_URL}
       EMBEDDED_URL: ${EMBEDDED_URL}
+      NYLAS_CLIENT_ID: ${NYLAS_CLIENT_ID}
+      SOE_API_PASSWORD: ${SOE_API_PASSWORD}
       PORT: 3000
     container_name: soe-embedded
     ports:
