--- a/embedded/package.json
+++ b/embedded/package.json
@@ -4,7 +4,6 @@
   "description": "Shopify's node app for CLI tool",
   "scripts": {
     "test": "jest",
-    "oldDev": "cross-env NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
     "dev": "NODE_ENV=development ts-node ./server/server.ts",
     "build": "NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "cross-env NODE_ENV=production ts-node ./server/server.ts"
@@ -19,62 +18,54 @@
     "url": "https://github.com/shopify/shopify-app-node/issues"
   },
   "dependencies": {
-    "@babel/core": "7.12.3",
+    "@babel/core": "7.12.10",
     "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.2",
-    "@shopify/app-bridge-react": "^1.15.0",
-    "@shopify/app-cli-node-generator-helper": "^1.1.2",
-    "@shopify/koa-shopify-auth": "^3.2.0",
-    "@shopify/koa-shopify-graphql-proxy": "^4.0.2",
-    "@shopify/koa-shopify-webhooks": "^2.5.3",
-    "@shopify/polaris": "^5.3.1",
-    "@zeit/next-css": "^1.0.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/register": "^7.12.10",
+    "@shopify/app-bridge-react": "^1.29.0",
+    "@shopify/app-bridge-utils": "^1.29.0",
+    "@shopify/koa-shopify-auth": "^4.1.2",
+    "@shopify/polaris": "^6.2.0",
     "apollo-boost": "^0.4.9",
-    "cross-env": "^7.0.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^3.0.0",
-    "koa": "^2.8.2",
-    "koa-mount": "^4.0.0",
-    "koa-proxies": "^0.11.0",
+    "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
-    "lodash": "^4.17.20",
-    "next": "^10.0.0",
+    "next": "^10.0.4",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
-    "nylas": "^5.3.1",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
-    "swr": "^0.3.11",
-    "ts-node": "^9.1.1",
-    "validator": "^13.5.2",
-    "react-hook-form": "^6.11.3"
+    "webpack": "^4.44.1",
+    "koa-mount": "^4.0.0",
+    "koa-proxies": "^0.11.0",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-stage-3": "^7.0.0",
-    "@prettier/plugin-php": "^0.15.2",
+    "babel-jest": "26.6.3",
+    "babel-register": "^6.26.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "husky": "^4.3.6",
+    "jest": "26.6.3",
+    "lint-staged": "^10.5.3",
+    "nodemon": "^2.0.0",
+    "prettier": "^2.2.1",
+    "react-addons-test-utils": "15.6.2",
+    "react-test-renderer": "16.14.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.5",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "babel-jest": "26.6.2",
-    "babel-register": "^6.26.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.5",
     "eslint": "^7.16.0",
-    "husky": "^4.0.7",
-    "jest": "26.6.2",
-    "lint-staged": "^10.0.1",
-    "nodemon": "^2.0.0",
-    "prettier": "^2.2.1",
-    "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.14.0",
     "tsmon": "^0.7.3",
     "typescript": "^4.1.3"
   },
