--- a/embedded/package.json
+++ b/embedded/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/shopify/shopify-app-node/issues"
   },
   "dependencies": {
-    "@babel/core": "7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
@@ -32,6 +32,8 @@
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^3.0.0",
     "koa": "^2.13.1",
+    "koa-mount": "^4.0.0",
+    "koa-proxies": "^0.11.0",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
     "next": "^10.0.4",
@@ -40,18 +42,23 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
-    "webpack": "^4.44.1",
-    "koa-mount": "^4.0.0",
-    "koa-proxies": "^0.11.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-stage-3": "^7.0.0",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^12.19.5",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-jest": "26.6.3",
     "babel-register": "^6.26.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
+    "eslint": "^7.16.0",
     "husky": "^4.3.6",
     "jest": "26.6.3",
     "lint-staged": "^10.5.3",
@@ -59,13 +66,6 @@
     "prettier": "^2.2.1",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^12.19.5",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.16.0",
     "tsmon": "^0.7.3",
     "typescript": "^4.1.3"
   },
