--- a/embedded/package.json
+++ b/embedded/package.json
@@ -42,6 +42,7 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
+    "swr": "^0.5.5",
     "ts-node": "^9.1.1",
     "webpack": "^4.44.1"
   },
